tests/integration/errors/struct_missing_field.rsg
// TEST: compile_error
// EXPECT-ERROR: missing field 'age'
module test_err

struct User {
    name: str
    age: i32
}

fn main() {
    u := User { name = "Alice" }
}
